Added some tests and mocks
